--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
 #root {
   height: 100%;
   overflow-x: auto; 
+  overflow: hidden;
 }
 
 .App {
